--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -1057,7 +1057,7 @@
       FUNÇÃO PARA COMPARTILHAR (navigator.share ou fallback WhatsApp)
       Recebe itemId e lang, gera URL com ?item=xxx&lang=yyy
     */
-  function shareItem(itemId, lang) {
+ function shareItem(itemId, lang) {
   const itemTitle = doacoesData[itemId].titulo[lang];
 
   // Mensagem padrão por idioma
@@ -1068,9 +1068,12 @@
   // Gera a URL correta com parâmetros
   const shareUrl = `${window.location.origin}${window.location.pathname}?item=${itemId}&lang=${lang}`;
 
+  // Mensagem completa com quebras de linha
+  const fullMessage = `${customMessage}\n\n${itemTitle}\n\n${shareUrl}`;
+
   const shareData = {
     title: itemTitle,
-    text: `${customMessage}\n\n${itemTitle}\n\n${shareUrl}`, // Adiciona a mensagem completa
+    text: fullMessage, // Inclui a mensagem personalizada
     url: shareUrl
   };
 
@@ -1079,8 +1082,8 @@
       .then(() => console.log("Compartilhamento bem-sucedido"))
       .catch((err) => console.log("Erro ao compartilhar:", err));
   } else {
-    // Fallback para WhatsApp
-    const wUrl = "https://wa.me/?text=" + encodeURIComponent(shareData.text);
+    // Fallback EXCLUSIVO para WhatsApp
+    const wUrl = "https://wa.me/?text=" + encodeURIComponent(fullMessage);
     window.open(wUrl, "_blank");
   }
 }
