--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -955,13 +955,13 @@
         },
         texto: {
           pt: `
-            📢 <strong>Precisamos de você para transformar vidas!</h2><br><br> 
+            📢 <strong>Precisamos de você para transformar vidas!</strong><br><br> 
             Até <strong>28 de fevereiro</strong>, temos um grande desafio: arrecadar fundos para a compra de <strong>20 tablets</strong> (US$ 100 cada) e dar início ao <strong>Learning Center no Camboja</strong>.<br><br> 
             📖 <strong>Já temos todo o material necessário</strong>, mas sem os tablets, as crianças <strong>não poderão acessar o Hannah English Course</strong>, perdendo a chance de aprender <strong>inglês através da Bíblia</strong>.<br><br> 
             💛 <strong>Sua doação pode fazer a diferença!</strong><br> 
             Cada contribuição nos aproxima desse objetivo e permite que mais crianças tenham acesso à educação e à Palavra de Deus.<br><br> 
             🙏 <strong>Ajude compartilhando!</strong><br> 
-            Se não puder contribuir diretamente, <strong>compartilhe esta campanha</strong> com amigos e familiares. Juntos, podemos alcançar essa meta e impactar muitas vidas!
+            Se não puder contribuir diretamente, <strong>compartilhe esta campanha</strong> com amigos e familiares. Juntos, podemos alcançar essa meta e impactar muitas vidas!<br><br> 
             📲 <strong>Clique no botão abaixo e divulgue essa causa!</strong> Juntos, podemos transformar vidas!<br><br>
             <div style="text-align: center; margin-top: 20px;">
               <img src="imagens/campanha.gif" alt="Share this campaign" style="width: 200px; cursor: pointer;" onclick="shareItem('campanha','pt')">
@@ -974,7 +974,7 @@
             💛 <strong>Your donation can make all the difference!</strong><br> 
             Every contribution brings us closer to this goal, giving more children access to education and the Word of God.<br><br> 
             🙏 <strong>Help by sharing!</strong><br> 
-            If you can’t donate directly, <strong>spread the word</strong> to friends and family. Together, we can reach this goal and impact many lives!
+            If you can’t donate directly, <strong>spread the word</strong> to friends and family. Together, we can reach this goal and impact many lives!<br><br> 
             📲 <strong>Click the button below and spread the word!</strong> Together, we can change lives!
             <div style="text-align: center; margin-top: 20px;">
               <img src="imagens/campanha.gif" alt="Share this campaign" style="width: 200px; cursor: pointer;" onclick="shareItem('campanha','en')">
