--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -6,6 +6,19 @@
   <meta name="theme-color" content="#658161" />
   <title id="page-title">Fundação Hannah - Doações</title>
 
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Ajude a Transformar Vidas - Fundação Hannah">
+<meta property="og:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
+<meta property="og:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
+<meta property="og:url" content="https://hannahenglishcourse.vercel.app/doacoes.html?item=campanha&lang=pt">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card (para Twitter e alguns outros serviços) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Ajude a Transformar Vidas - Fundação Hannah">
+<meta name="twitter:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
+<meta name="twitter:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
