--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -859,9 +859,11 @@
       </ul>
     </nav>
 
-    <div class="cta-header">
-      <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
-    </div>
+   <div class="cta-header">
+  <a id="nav-doar" href="https://hannahenglishcourse.vercel.app/Carrossel/doe.html" target="_blank">
+    <button>Doe Agora</button>
+  </a>
+</div>
 
     <!-- NOVO SELETOR DE IDIOMA -->
     <div class="lang-switch">
@@ -878,10 +880,10 @@
     </div>
   </header>
 
-  <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile" onclick="alert('Página de Doação em desenvolvimento')">
-    Doe Agora
-  </button>
+ <!-- Botão flutuante (mobile) -->
+<button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  Doe Agora
+</button>
 
   <!-- HERO -->
   <section id="hero">
