--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -859,10 +859,10 @@
       </ul>
     </nav>
 
-   <div class="cta-header">
-  <a id="nav-doar" href="https://hannahenglishcourse.vercel.app/Carrossel/doe.html" target="_blank">
-    <button>Doe Agora</button>
-  </a>
+  <div class="cta-header">
+  <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+    Doe Agora
+  </button>
 </div>
 
     <!-- NOVO SELETOR DE IDIOMA -->
