--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -732,7 +732,7 @@
     </div>
     <p>
       <span class="lang-pt">
-        Endereço: 106/18 Village No.13, Piyaporn Village, Mai Sai Subdistrict, Mae Sai District, Chiang Rai Province, 57130 |
+        Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 |
         E-mail: thailandhannahfoundation@gmail.com |
         WhatsApp: +66622634630
       </span>
