--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1224,7 +1224,7 @@
       <a href="https://instagram.com" target="_blank">Instagram</a> |
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
-    <p id="footer-info">Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | WhatsApp: (Seu telefone)</p>
+    <p id="footer-info">Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</p>
   </footer>
 
   <!-- SCRIPTS -->
