--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -741,8 +741,8 @@
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
     <p>
-      <span class="lang-pt">Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | WhatsApp: (Seu telefone)</span>
-      <span class="lang-en">Address: (Your full address) | Email: (Your email) | WhatsApp: (Your phone number)</span>
+      <span class="lang-pt">Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</span>
+      <span class="lang-en">Address: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | Email: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</span>
     </p>
   </footer>
 
