--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -565,9 +565,13 @@
     </nav>
 
     <div class="cta-header">
-      <button onclick="alert('Página de Doação em desenvolvimento')" class="lang-pt">Doe Agora</button>
-      <button onclick="alert('Donation Page in development')" class="lang-en">Donate Now</button>
-    </div>
+  <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-pt">
+    Doe Agora
+  </button>
+  <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-en">
+    Donate Now
+  </button>
+</div>
 
     <!-- Seletor de idioma com bandeiras -->
     <div class="lang-switch">
@@ -583,12 +587,12 @@
   </header>
 
   <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile lang-pt" onclick="alert('Página de Doação em desenvolvimento')">
-    Doe Agora
-  </button>
-  <button class="donate-float-mobile lang-en" onclick="alert('Donation Page in development')">
-    Donate Now
-  </button>
+<button class="donate-float-mobile lang-pt" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  Doe Agora
+</button>
+<button class="donate-float-mobile lang-en" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  Donate Now
+</button>
 
   <!-- TÍTULO PARALLAX (ocupa 100vh) -->
   <section id="pagina-projetos-hero">
