--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -667,7 +667,7 @@
           </h5>
           <div>
             <img src="imagens/pix.png" alt="Pix" />
-            <p>chave pix: gsroquette@gmail.com</p>
+            <p>chave pix: hannah.foundation.th@gmail.com</p>
           </div>
 
           <!-- Subtítulo 2: Internacional / International -->
