--- a/Carrossel/doe - Copy.html
+++ b/Carrossel/doe - Copy.html
@@ -6,6 +6,19 @@
   <meta name="theme-color" content="#658161" />
   <title id="page-title">Fundação Hannah - Doações</title>
 
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:title" content="Ajude a Transformar Vidas - Fundação Hannah">
+<meta property="og:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
+<meta property="og:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
+<meta property="og:url" content="https://hannahenglishcourse.vercel.app/doacoes.html?item=campanha&lang=pt">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card (para Twitter e alguns outros serviços) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Ajude a Transformar Vidas - Fundação Hannah">
+<meta name="twitter:description" content="Participe desta campanha especial e ajude a levar educação e esperança para crianças em necessidade!">
+<meta name="twitter:image" content="https://hannahenglishcourse.vercel.app/imagens/campanha.gif">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -654,7 +667,7 @@
           </h5>
           <div>
             <img src="imagens/pix.png" alt="Pix" />
-            <p>chave pix: gsroquette@gmail.com</p>
+            <p>chave pix: hannah.foundation.th@gmail.com</p>
           </div>
 
           <!-- Subtítulo 2: Internacional / International -->
@@ -719,7 +732,7 @@
     </div>
     <p>
       <span class="lang-pt">
-        Endereço: 106/18 Village No.13, Piyaporn Village, Mai Sai Subdistrict, Mae Sai District, Chiang Rai Province, 57130 |
+        Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 |
         E-mail: thailandhannahfoundation@gmail.com |
         WhatsApp: +66622634630
       </span>
@@ -955,13 +968,13 @@
         },
         texto: {
           pt: `
-            📢 <strong>Precisamos de você para transformar vidas!</h2><br><br> 
+            📢 <strong>Precisamos de você para transformar vidas!</strong><br><br> 
             Até <strong>28 de fevereiro</strong>, temos um grande desafio: arrecadar fundos para a compra de <strong>20 tablets</strong> (US$ 100 cada) e dar início ao <strong>Learning Center no Camboja</strong>.<br><br> 
             📖 <strong>Já temos todo o material necessário</strong>, mas sem os tablets, as crianças <strong>não poderão acessar o Hannah English Course</strong>, perdendo a chance de aprender <strong>inglês através da Bíblia</strong>.<br><br> 
             💛 <strong>Sua doação pode fazer a diferença!</strong><br> 
             Cada contribuição nos aproxima desse objetivo e permite que mais crianças tenham acesso à educação e à Palavra de Deus.<br><br> 
             🙏 <strong>Ajude compartilhando!</strong><br> 
-            Se não puder contribuir diretamente, <strong>compartilhe esta campanha</strong> com amigos e familiares. Juntos, podemos alcançar essa meta e impactar muitas vidas!
+            Se não puder contribuir diretamente, <strong>compartilhe esta campanha</strong> com amigos e familiares. Juntos, podemos alcançar essa meta e impactar muitas vidas!<br><br> 
             📲 <strong>Clique no botão abaixo e divulgue essa causa!</strong> Juntos, podemos transformar vidas!<br><br>
             <div style="text-align: center; margin-top: 20px;">
               <img src="imagens/campanha.gif" alt="Share this campaign" style="width: 200px; cursor: pointer;" onclick="shareItem('campanha','pt')">
@@ -974,7 +987,7 @@
             💛 <strong>Your donation can make all the difference!</strong><br> 
             Every contribution brings us closer to this goal, giving more children access to education and the Word of God.<br><br> 
             🙏 <strong>Help by sharing!</strong><br> 
-            If you can’t donate directly, <strong>spread the word</strong> to friends and family. Together, we can reach this goal and impact many lives!
+            If you can’t donate directly, <strong>spread the word</strong> to friends and family. Together, we can reach this goal and impact many lives!<br><br> 
             📲 <strong>Click the button below and spread the word!</strong> Together, we can change lives!
             <div style="text-align: center; margin-top: 20px;">
               <img src="imagens/campanha.gif" alt="Share this campaign" style="width: 200px; cursor: pointer;" onclick="shareItem('campanha','en')">
@@ -1057,24 +1070,36 @@
       FUNÇÃO PARA COMPARTILHAR (navigator.share ou fallback WhatsApp)
       Recebe itemId e lang, gera URL com ?item=xxx&lang=yyy
     */
-    function shareItem(itemId, lang) {
-      const itemTitle = doacoesData[itemId].titulo[lang];
-      // Monta URL com parâmetros
-      const shareUrl = window.location.origin + window.location.pathname + `?item=${itemId}&lang=${lang}`;
-      const shareData = {
-        title: itemTitle,
-        text: itemTitle + ' - Hannah Foundation',
-        url: shareUrl
-      };
+ function shareItem(itemId, lang) {
+  const itemTitle = doacoesData[itemId].titulo[lang];
 
-      if (navigator.share) {
-        navigator.share(shareData).catch((err) => console.log(err));
-      } else {
-        // Fallback para WhatsApp
-        const wUrl = "https://wa.me/?text=" + encodeURIComponent(shareData.text + " " + shareData.url);
-        window.open(wUrl, "_blank");
-      }
-    }
+  // Mensagem padrão por idioma
+  const customMessage = (lang === "pt") 
+    ? "Ajude a transformar vidas! Compartilhe essa iniciativa da Fundação Hannah:"
+    : "Help transform lives! Share this initiative from Hannah Foundation:";
+
+  // Gera a URL correta com parâmetros
+  const shareUrl = `${window.location.origin}${window.location.pathname}?item=${itemId}&lang=${lang}`;
+
+  // Mensagem completa com quebras de linha
+  const fullMessage = `${customMessage}\n\n${itemTitle}\n\n${shareUrl}`;
+
+  const shareData = {
+    title: itemTitle,
+    text: fullMessage, // Inclui a mensagem personalizada
+    url: shareUrl
+  };
+
+  if (navigator.share) {
+    navigator.share(shareData)
+      .then(() => console.log("Compartilhamento bem-sucedido"))
+      .catch((err) => console.log("Erro ao compartilhar:", err));
+  } else {
+    // Fallback EXCLUSIVO para WhatsApp
+    const wUrl = "https://wa.me/?text=" + encodeURIComponent(fullMessage);
+    window.open(wUrl, "_blank");
+  }
+}
 
     /*
       AO CARREGAR A PÁGINA, LÊ PARÂMETROS DA URL:
