--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1294,6 +1294,29 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
       // Fecha container de detalhes se estiver aberto
       fecharDetalhes();
     }
+// Função para obter parâmetros da URL
+function getParametroUrl(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
+
+// Executa ao carregar a página
+document.addEventListener("DOMContentLoaded", function () {
+    const projetoSelecionado = getParametroUrl("projeto");
+    const idiomaSelecionado = getParametroUrl("lang");
+
+    // Se houver um idioma na URL, definir o idioma
+    if (idiomaSelecionado) {
+        setLanguage(idiomaSelecionado);
+    }
+
+    // Se houver um projeto na URL, abrir automaticamente
+    if (projetoSelecionado && projetosData[projetoSelecionado]) {
+        setTimeout(() => {
+            mostrarDetalhes(projetoSelecionado);
+        }, 500); // Pequeno delay para garantir que a página carregue corretamente
+    }
+});
   </script>
 </body>
 </html>
