--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1480,6 +1480,34 @@
           document.getElementById('modal-title').textContent = clickedTitle;
           document.getElementById('modal-text').textContent = clickedText;
 
+// Atualiza o link do botão "Saiba Mais" no modal
+document.getElementById("modal-learn-more").addEventListener("click", function (event) {
+    event.preventDefault(); // Evita redirecionamento imediato
+
+    const projeto = document.getElementById("modal-title").textContent.trim(); // Captura o nome do projeto
+    const lang = document.documentElement.getAttribute("lang") || "pt"; // Obtém o idioma atual da página
+
+    // Mapeamento dos projetos para URLs amigáveis (se necessário)
+    const projetosMap = {
+        "Centro de Aprendizado HIS": "his-learning-center",
+        "Mãos que Curam": "healing-hands",
+        "Mesa de Bênçãos": "blessing-table",
+        "Sementes de Sabedoria": "seeds-of-wisdom",
+        "Lar de Siló": "shiloh-home",
+        "Plantação de Igrejas de Hannah": "church-planting",
+        "Colhendo Fé": "harvesting-faith",
+        "Curso de Inglês Hannah": "hannah-english-course"
+    };
+
+    const projetoSlug = projetosMap[projeto] || "default";
+
+    // Monta a URL com os parâmetros
+    const urlDestino = `projetos.html?projeto=${encodeURIComponent(projetoSlug)}&lang=${lang}`;
+
+    // Redireciona para a página de projetos
+    window.location.href = urlDestino;
+});
+
           // Atualiza texto do botão "Saiba Mais / Learn More" conforme idioma atual
           const currentLang = document.documentElement.getAttribute('lang') || 'pt';
           document.getElementById('modal-learn-more').innerHTML = translations['modal-learn-more'][currentLang];
