--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1294,27 +1294,44 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
       // Fecha container de detalhes se estiver aberto
       fecharDetalhes();
     }
+
 // Função para obter parâmetros da URL
-function getParametroUrl(param) {
+function getQueryParam(param) {
     const urlParams = new URLSearchParams(window.location.search);
     return urlParams.get(param);
 }
 
-// Executa ao carregar a página
-document.addEventListener("DOMContentLoaded", function () {
-    const projetoSelecionado = getParametroUrl("projeto");
-    const idiomaSelecionado = getParametroUrl("lang");
+document.addEventListener('DOMContentLoaded', () => {
+    const projetoSelecionado = getQueryParam("projeto"); // Obtém o nome do projeto da URL
+    const langSelecionado = getQueryParam("lang"); // Obtém o idioma da URL
 
-    // Se houver um idioma na URL, definir o idioma
-    if (idiomaSelecionado) {
-        setLanguage(idiomaSelecionado);
+    if (projetoSelecionado) {
+        // Mapeia os slugs para os IDs reais dos containers
+        const projetosMap = {
+            "his-learning-center": "container-his",
+            "healing-hands": "container-healing",
+            "blessing-table": "container-blessing",
+            "seeds-of-wisdom": "container-seeds",
+            "shiloh-home": "container-shiloh",
+            "church-planting": "container-church",
+            "harvesting-faith": "container-harvesting",
+            "hannah-english-course": "container-hannah"
+        };
+
+        const containerId = projetosMap[projetoSelecionado];
+
+        if (containerId) {
+            const container = document.getElementById(containerId);
+            if (container) {
+                container.style.display = "block"; // Exibe o container correto
+                container.scrollIntoView({ behavior: "smooth", block: "start" }); // Faz scroll até ele
+            }
+        }
     }
 
-    // Se houver um projeto na URL, abrir automaticamente
-    if (projetoSelecionado && projetosData[projetoSelecionado]) {
-        setTimeout(() => {
-            mostrarDetalhes(projetoSelecionado);
-        }, 500); // Pequeno delay para garantir que a página carregue corretamente
+    // Se um idioma foi passado na URL, altera a linguagem da página
+    if (langSelecionado) {
+        changeLanguage(langSelecionado);
     }
 });
   </script>
