--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1301,37 +1301,21 @@ function getQueryParam(param) {
     return urlParams.get(param);
 }
 
-document.addEventListener('DOMContentLoaded', () => {
+// Executa ao carregar a página
+document.addEventListener("DOMContentLoaded", function () {
     const projetoSelecionado = getQueryParam("projeto"); // Obtém o nome do projeto da URL
     const langSelecionado = getQueryParam("lang"); // Obtém o idioma da URL
 
-    if (projetoSelecionado) {
-        // Mapeia os slugs para os IDs reais dos containers
-        const projetosMap = {
-            "his-learning-center": "container-his",
-            "healing-hands": "container-healing",
-            "blessing-table": "container-blessing",
-            "seeds-of-wisdom": "container-seeds",
-            "shiloh-home": "container-shiloh",
-            "church-planting": "container-church",
-            "harvesting-faith": "container-harvesting",
-            "hannah-english-course": "container-hannah"
-        };
-
-        const containerId = projetosMap[projetoSelecionado];
-
-        if (containerId) {
-            const container = document.getElementById(containerId);
-            if (container) {
-                container.style.display = "block"; // Exibe o container correto
-                container.scrollIntoView({ behavior: "smooth", block: "start" }); // Faz scroll até ele
-            }
-        }
+    // Se houver um idioma na URL, definir o idioma
+    if (langSelecionado) {
+        setLanguage(langSelecionado);
     }
 
-    // Se um idioma foi passado na URL, altera a linguagem da página
-    if (langSelecionado) {
-        changeLanguage(langSelecionado);
+    // Se houver um projeto na URL, exibir automaticamente seus detalhes
+    if (projetoSelecionado && projetosData[projetoSelecionado]) {
+        setTimeout(() => {
+            mostrarDetalhes(projetoSelecionado);
+        }, 500); // Pequeno delay para garantir que a página carregue corretamente
     }
 });
   </script>
