--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -183,7 +183,7 @@
     });
   }
 
-  // Configuração do Reconhecimento de Voz (apenas para entrada do usuário, não para sintetizar voz)
+  // Configuração do Reconhecimento de Voz (apenas para entrada do usuário)
   function setupSpeechRecognition() {
     if (!checkSpeechRecognitionSupport()) return;
 
@@ -407,7 +407,6 @@
   // Interrompe qualquer áudio se sair da página
   document.addEventListener("visibilitychange", () => {
     if (document.hidden) {
-      // Aqui não temos mais speechSynthesis, então apenas logamos se quisermos
       console.log("Page is hidden - you could stop playing audio if needed.");
     }
   });
