--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1009,8 +1009,8 @@ In a second phase, we plan to make the app available in Brazil so that anyone ca
           ]
         },
         recursos: {
-          pt: `Atualmente, estamos abrindo um novo Learning Center no Camboja que utilizará esse aplicativo. Precisamos de recursos para manter o missionário no Camboja, contratar um tutor e adquirir 20 notebooks (US$100 cada) para iniciar as aulas em abril.`,
-          en: `We are currently opening a new Learning Center in Cambodia that will use this app. We need resources to support the missionary in Cambodia, hire a tutor, and purchase 20 notebooks (US$100 each) to begin classes in April.`
+          pt: `Atualmente, estamos abrindo um novo Learning Center no Camboja que utilizará esse aplicativo. Precisamos de recursos para manter o missionário no Camboja, contratar um tutor e adquirir 20 notebooks com capas protetoras (US$185 cada) para iniciar as aulas em abril.`,
+          en: `We are currently opening a new Learning Center in Cambodia that will use this app. We need resources to support the missionary in Cambodia, hire a tutor, and purchase 20 notebooks with protective covers (US$185 each) to begin classes in April.`
         },
         termometro: 10
       },
