--- a/LandPage/parceria.html
+++ b/LandPage/parceria.html
@@ -72,6 +72,7 @@
       text-align: center;
       padding: 2rem 1rem;
       margin-bottom: 1rem;
+      position: relative;
     }
     .hero img {
       max-width: 200px;
@@ -103,6 +104,17 @@
       background-color: #45a049;
     }
 
+    /* BOTÃO FLUTUANTE PARA TELAS PEQUENAS */
+    @media (max-width: 600px) {
+      .floating-btn {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      }
+    }
+
     /* SEÇÕES */
     section {
       background-color: rgba(255, 255, 255, 0.8);
@@ -121,6 +133,24 @@
     .highlight {
       font-weight: bold;
       color: #2F4F2F;
+    }
+
+    /* IMAGENS CENTRALIZADAS */
+    .center-image {
+      text-align: center;
+      margin: 1rem 0;
+    }
+    .center-image img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .caption {
+      text-align: center;
+      font-size: 0.9rem;
+      font-weight: bold;
+      margin-top: 0.5rem;
     }
 
     /* SEÇÃO COM IMAGEM CENTRALIZADA */
@@ -226,11 +256,11 @@
     <!-- HEADER -->
     <header>
       <div class="logo-area">
-        <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
-          <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
+        <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html" target="_blank">
+          <img src="logo-hannahfoundation.png" alt="Logo Hannah">
         </a>
-        <a href="https://nacaodacruz.com.br/" target="_blank">
-          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        <a href="https://www.safeplacemission.com/index" target="_blank">
+          <img src="Safe.jpg" alt="Logo Safe">
         </a>
       </div>
       <h1>Apoie o Hannah Learning Center – Transformando Vidas com Educação e Fé</h1>
@@ -241,7 +271,7 @@
       <img src="./gif-hannah.gif" alt="Hannah em GIF">
       <h2>Aprendendo Inglês e Vivendo a Palavra de Deus em Kampot, Camboja</h2>
       <p>Imagine um centro de ensino onde a aprendizagem do inglês se une aos valores cristãos para pregar o Evangelho e transformar a realidade de crianças de baixa renda.</p>
-      <a class="cta-btn" href="#doe" target="_self">
+      <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank">
         Apoie o Projeto
       </a>
     </section>
@@ -251,6 +281,11 @@
       <h3>Conheça o Projeto</h3>
       <p><strong>O projeto ainda não começou – precisamos das doações para torná-lo realidade!</strong></p>
       <p>Com previsão de início em <strong>21 de abril de 2025</strong>, o Hannah Learning Center será instalado em Kampot, Camboja, nas dependências da Igreja Metodista. Aqui, até <strong>60 alunos</strong> terão a oportunidade de aprender inglês em aulas extracurriculares, de segunda a sábado, das 17h00 às 19h30, em um ambiente que fortalece tanto o conhecimento acadêmico quanto a fé cristã.</p>
+      <!-- Imagem do Learning Center na Tailândia -->
+      <div class="center-image">
+        <img src="LCthai.jpg" alt="Learning Center na Tailândia">
+        <div class="caption">-Learning Center na Tailândia-</div>
+      </div>
       <p>Cada aula é cuidadosamente planejada para:</p>
       <ul>
         <li><strong>Ensinar Inglês de Forma Inovadora:</strong> Métodos interativos adaptados às necessidades de cada aluno.</li>
@@ -282,10 +317,16 @@
         <li><strong>Alcance Amplo:</strong> Perfeito tanto para crianças quanto para adultos que desejam aprimorar o inglês com fundamentos sólidos.</li>
         <li><strong>Flexibilidade de Uso:</strong> Adaptável a aulas presenciais na igreja ou ao estudo individual, no conforto do lar.</li>
       </ul>
+      <!-- Imagem de Atividades -->
+      <div class="center-image">
+        <img src="./atividades_image.png" alt="Atividades Interativas">
+      </div>
       <p>Com o Hannah English Course, aprender inglês vai muito além de estudar gramática e vocabulário. Cada versículo, cada história, cada atividade se transforma em uma experiência que enriquece a mente e fortalece a fé.</p>
-      <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/" target="_blank">
-        Conheça o Curso
-      </a>
+     <div style="text-align: center; margin-top: 1rem;">
+  <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank">
+    Conheça o App do Curso
+  </a>
+</div>
     </section>
 
     <!-- SEÇÃO: TRANSPARÊNCIA E NECESSIDADES DO PROJETO -->
@@ -325,8 +366,8 @@
         <li><strong>Compra dos Tablets:</strong> Ferramentas indispensáveis para tornar as aulas interativas e dinâmicas. Precisamos adquirir 20 tablets para dar início ao projeto.</li>
       </ul>
       <div style="text-align: center; margin-top: 1rem;">
-        <a class="cta-btn" href="#doe" target="_self">
-          Doe Aqui – Ajude na Compra dos Tablets
+        <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/doe.html?item=campanha&lang=pt" target="_blank">
+          Doe aqui - Ajude na compra dos tablets
         </a>
       </div>
     </section>
@@ -346,17 +387,17 @@
       <h3>Seja Parte Dessa Transformação</h3>
       <p>Está na hora de fazer a diferença! Junte-se a nós nessa jornada de esperança e transformação. Sua doação é mais que um apoio financeiro – é um ato de amor e fé que pode mudar o destino de muitas crianças e, consequentemente, de toda uma comunidade.</p>
       <div style="text-align: center; margin-top: 1rem;">
-        <a class="cta-btn" href="#doe" target="_self">
+        <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank">
           FAÇA SUA DOAÇÃO AGORA
         </a>
       </div>
     </section>
 
-    <!-- SEÇÃO: CONHEÇA GUSTAVO E CARLA ROQUELTE -->
+    <!-- SEÇÃO: CONHEÇA GUSTAVO E CARLA ROQUETTE -->
     <section>
       <h3>Conheça Gustavo e Carla Roquette</h3>
-      <div style="text-align: center; margin-bottom: 1rem;">
-        <img src="./fotogustavocarla.png" alt="Gustavo e Carla Roquette" style="max-width: 300px; width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+      <div class="center-image">
+        <img src="./fotogustavocarla.png" alt="Gustavo e Carla Roquette" style="max-width: 300px; width: 100%;">
       </div>
       <p>Gustavo e Carla Roquette são missionários brasileiros com mais de 20 anos de experiência em educação e missões. Idealizadores do <strong>Hannah English Course</strong> e do <strong>Hannah Learning Center</strong>, eles já atuaram em países como Tailândia e Myanmar, onde plantaram igrejas utilizando a estratégia dos Learning Centers. Com uma trajetória marcada pelo conhecimento, fé e compromisso social, Gustavo e Carla demonstram que, com dedicação, é possível construir pontes de esperança e transformar realidades.</p>
     </section>
@@ -400,29 +441,46 @@
       <p>Aprender inglês de maneira significativa, fortalecer sua fé e, de quebra, sustentar projetos missionários que levam o Evangelho a lugares carentes. Tudo isso é possível com o Hannah English Course e o nosso novo projeto, o Hannah Learning Center.</p>
       <p><strong>Entre em contato</strong> e descubra como você pode fazer parte dessa transformação!</p>
       <div style="text-align: center; margin-top: 1rem;">
-        <a class="cta-btn" href="#doe" target="_self">
+        <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank">
           Conheça o Projeto
         </a>
       </div>
     </section>
 
+    <!-- BOTÃO FLUTUANTE PARA TELAS PEQUENAS -->
+    <a class="cta-btn floating-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank" style="display:none;">
+      Apoie o Projeto
+    </a>
+
     <!-- RODAPÉ -->
     <footer>
       <p><em>“E disse-lhes: Ide por todo o mundo, pregai o evangelho a toda criatura.” (Marcos 16:15)</em></p>
       <div class="footer-logos">
-        <a href="https://www.instagram.com/hannah_mission?igsh=ZHloNnpuYmEwaGdj&utm_source=qr" target="_blank">
-          <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation Thailand">
+       <a href="https://hannahenglishcourse.vercel.app/Carrossel/hannah.html" target="_blank">
+          <img src="logo-hannahfoundation.png" alt="Logo Hannah">
         </a>
-        <a href="https://nacaodacruz.com.br/" target="_blank">
-          <img src="./logo-nacaodacruz.png" alt="Logo Missão Nação da Cruz">
+        <a href="https://www.safeplacemission.com/index" target="_blank">
+          <img src="Safe.jpg" alt="Logo Safe">
         </a>
       </div>
       <div class="footer-copy">
         <p>© 2025 Hannah English Course. Todos os direitos reservados.</p>
       </div>
     </footer>
-
   </div> <!-- fim .container -->
 
+  <script>
+    // Exibe o botão flutuante em telas pequenas
+    function checkScreenSize() {
+      const floatingBtn = document.querySelector('.floating-btn');
+      if (window.innerWidth <= 600) {
+        floatingBtn.style.display = 'block';
+      } else {
+        floatingBtn.style.display = 'none';
+      }
+    }
+    window.addEventListener('load', checkScreenSize);
+    window.addEventListener('resize', checkScreenSize);
+  </script>
 </body>
 </html>
