--- a/LandPage/parceria.html
+++ b/LandPage/parceria.html
@@ -323,7 +323,7 @@
       </div>
       <p>Com o Hannah English Course, aprender inglês vai muito além de estudar gramática e vocabulário. Cada versículo, cada história, cada atividade se transforma em uma experiência que enriquece a mente e fortalece a fé.</p>
      <div style="text-align: center; margin-top: 1rem;">
-  <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank">
+  <a class="cta-btn" href="https://hannahenglishcourse.vercel.app/" target="_blank">
     Conheça o App do Curso
   </a>
 </div>
@@ -360,7 +360,7 @@
         </tr>
       </table>
       <p>Investimento por criança: aproximadamente <strong>$15,33</strong> mensais.</p>
-      <h4>Necessidades Específicas:</h4>
+      <h4>Necessidades Urgentes:</h4>
       <ul>
         <li><strong>Salário do Tutor Missionário:</strong> Essencial para garantir a continuidade e a qualidade do ensino.</li>
         <li><strong>Compra dos Tablets:</strong> Ferramentas indispensáveis para tornar as aulas interativas e dinâmicas. Precisamos adquirir 20 tablets para dar início ao projeto.</li>
