--- a/Carrossel/projetos - Copy (2).html
+++ b/Carrossel/projetos - Copy (2).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -398,38 +398,12 @@
     .detalhes-img {
       flex: 1 1 300px;
       max-width: 350px;
-      position: relative;
     }
     .detalhes-img img {
       width: 100%;
       border-radius: 8px;
       object-fit: cover;
     }
-    /* NOVO: Carrossel interno de imagens nos detalhes */
-    .detalhes-carousel {
-      margin-top: 10px;
-      overflow-x: auto;
-      display: flex;
-      gap: 10px;
-      padding: 5px 0;
-    }
-    .detalhes-carousel-track {
-      display: flex;
-      gap: 10px;
-    }
-    .detalhes-carousel-item {
-      width: 80px;
-      height: 60px;
-      object-fit: cover;
-      cursor: pointer;
-      border-radius: 4px;
-      border: 2px solid transparent;
-      transition: border-color 0.3s ease;
-    }
-    .detalhes-carousel-item:hover {
-      border-color: var(--primaria);
-    }
-
     .detalhes-texto {
       flex: 2 1 300px;
     }
@@ -518,47 +492,6 @@
     .lang-en {
       display: none;   /* Padrão EN oculto */
     }
-
-    /* NOVO: Estilos para o modal de imagem ampliada do carrossel interno */
-    .carousel-modal {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 100;
-    }
-    .carousel-modal img {
-      max-width: 90%;
-      max-height: 90%;
-    }
-    .modal-prev, .modal-next, .modal-close {
-      position: absolute;
-      background-color: rgba(0,0,0,0.5);
-      color: #fff;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      font-size: 24px;
-    }
-    .modal-prev {
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .modal-next {
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .modal-close {
-      top: 10px;
-      right: 10px;
-    }
   </style>
 </head>
 
@@ -632,13 +565,13 @@
     </nav>
 
     <div class="cta-header">
-      <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-pt">
-        Doe Agora
-      </button>
-      <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-en">
-        Donate Now
-      </button>
-    </div>
+  <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-pt">
+    Doe Agora
+  </button>
+  <button onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'" class="lang-en">
+    Donate Now
+  </button>
+</div>
 
     <!-- Seletor de idioma com bandeiras -->
     <div class="lang-switch">
@@ -654,12 +587,12 @@
   </header>
 
   <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile lang-pt" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-    Doe Agora
-  </button>
-  <button class="donate-float-mobile lang-en" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-    Donate Now
-  </button>
+<button class="donate-float-mobile lang-pt" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  Doe Agora
+</button>
+<button class="donate-float-mobile lang-en" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  Donate Now
+</button>
 
   <!-- TÍTULO PARALLAX (ocupa 100vh) -->
   <section id="pagina-projetos-hero">
@@ -762,12 +695,6 @@
       <div class="detalhes-conteudo">
         <div class="detalhes-img">
           <img id="detalhes-img" src="" alt="Imagem Projeto" />
-          <!-- NOVO: Carrossel interno abaixo da imagem principal -->
-          <div class="detalhes-carousel">
-            <div class="detalhes-carousel-track" id="detalhes-carousel-track">
-              <!-- As miniaturas serão inseridas dinamicamente -->
-            </div>
-          </div>
         </div>
         <div class="detalhes-texto">
           <p id="detalhes-texto"></p>
@@ -805,14 +732,6 @@
       </div>
     </div>
   </section>
-
-  <!-- MODAL PARA IMAGEM AMPLIADA DO CARROSSEL INTERNO -->
-  <div id="carousel-modal" class="carousel-modal">
-    <button class="modal-close" id="modal-close">X</button>
-    <button class="modal-prev" id="modal-prev">&#10094;</button>
-    <img id="modal-image" src="" alt="Imagem Ampliada" />
-    <button class="modal-next" id="modal-next">&#10095;</button>
-  </div>
 
   <!-- RODAPÉ -->
   <footer id="footer">
@@ -959,12 +878,7 @@ Shiloh’s Home exists to welcome these mothers and children, offering them a sa
           pt: `Precisamos de doações para manter o abrigo em funcionamento: aluguel, alimentos, roupas, produtos de higiene e suporte financeiro para novas famílias.`,
           en: `We need donations to keep the shelter running: rent, food, clothing, hygiene products, and financial support for new families.`
         },
-        termometro: 20,
-        carousel: [
-          "imagens/abrigo/img1.png",
-          "imagens/abrigo/img2.png",
-          "imagens/abrigo/img3.png"
-        ]
+        termometro: 20
       },
       bolsa: {
         img: "imagens/bolsa escola hannah.png",
@@ -1006,12 +920,7 @@ In addition to formal education, these children also attend our Learning Center 
           pt: `Precisamos de recursos para cobrir os custos das bolsas e materiais escolares do próximo ano letivo, além de apoio para processos burocráticos e documentação.`,
           en: `We need resources to cover the costs of scholarships and school materials for the upcoming school year, as well as support for bureaucratic processes and documentation.`
         },
-        termometro: 25,
-        carousel: [
-          "imagens/bolsa/img1.png",
-          "imagens/bolsa/img2.png",
-          "imagens/bolsa/img3.png"
-        ]
+        termometro: 25
       },
       fazenda: {
         img: "imagens/fazenda hannah.png",
@@ -1034,7 +943,7 @@ The Harvesting Faith project was created to empower communities in Myanmar in ag
 
 Before the war began, we maintained an egg production farm with nearly 1,000 chickens, using an organic, free-range system, and developed our own low-cost feed—one of the biggest challenges in animal husbandry in the region.
 
-Unfortunately, due to the escalating war and the closure of Myanmar’s borders, the project is temporarily paused. However, we continue praying and waiting for the opportunity to resume it, because we know that sustainable agriculture is a powerful way to transform communities and bring hope to even the most remote villages.
+Unfortunately, due to the escalating war and the closure of Myanmar’s borders, the project is temporarily inactive. However, we continue praying and waiting for the opportunity to resume it, because we know that sustainable agriculture is a powerful way to transform communities and bring hope to even the most remote villages.
         `
         },
         acoes: {
@@ -1053,12 +962,7 @@ Unfortunately, due to the escalating war and the closure of Myanmar’s borders,
           pt: `Atualmente, o projeto está pausado devido à guerra. Precisamos de recursos para reativá-lo assim que as condições permitirem, incluindo insumos agrícolas, equipamentos e infraestrutura.`,
           en: `The project is currently paused due to the war. We need resources to reactivate it as soon as conditions allow, including agricultural supplies, equipment, and infrastructure.`
         },
-        termometro: 0,
-        carousel: [
-          "imagens/fazenda/img1.png",
-          "imagens/fazenda/img2.png",
-          "imagens/fazenda/img3.png"
-        ]
+        termometro: 0
       },
       ingles: {
         img: "imagens/ingles.png",
@@ -1108,12 +1012,7 @@ In a second phase, we plan to make the app available in Brazil so that anyone ca
           pt: `Atualmente, estamos abrindo um novo Learning Center no Camboja que utilizará esse aplicativo. Precisamos de recursos para manter o missionário no Camboja, contratar um tutor e adquirir 20 notebooks com capas protetoras (US$185 cada) para iniciar as aulas em abril.`,
           en: `We are currently opening a new Learning Center in Cambodia that will use this app. We need resources to support the missionary in Cambodia, hire a tutor, and purchase 20 notebooks with protective covers (US$185 each) to begin classes in April.`
         },
-        termometro: 10,
-        carousel: [
-          "imagens/ingles/img1.png",
-          "imagens/ingles/img2.png",
-          "imagens/ingles/img3.png"
-        ]
+        termometro: 10
       },
       food: {
         img: "imagens/food hannah.png",
@@ -1147,12 +1046,7 @@ Food is essential for life, especially for those facing the horrors of war and e
           pt: `Precisamos de doações para a compra de alimentos e verba para logística e transporte.`,
           en: `We need donations to purchase food and to cover logistics and transportation costs.`
         },
-        termometro: 20,
-        carousel: [
-          "imagens/food/img1.png",
-          "imagens/food/img2.png",
-          "imagens/food/img3.png"
-        ]
+        termometro: 20
       },
       his: {
         img: "imagens/HIS hannah.png",
@@ -1202,12 +1096,7 @@ We are facing two major challenges:
 2. Funding to open the new Learning Center in Cambodia, including hiring a tutor and supporting a missionary on-site (US$ 920 per month).
           `
         },
-        termometro: 1,
-        carousel: [
-          "imagens/his/img1.png",
-          "imagens/his/img2.png",
-          "imagens/his/img3.png"
-        ]
+        termometro: 1
       },
       saude: {
         img: "imagens/saude hannah.png",
@@ -1249,12 +1138,7 @@ With the emergency health fund, we seek not only to save lives but also to be a 
           pt: `Precisamos de recursos para criar e manter um fundo de saúde emergencial, adquirir medicamentos e equipamentos médicos, além de parcerias com profissionais voluntários e transporte para atender às necessidades.`,
           en: `We need resources to create and maintain an emergency health fund, acquire medications and medical equipment, as well as partnerships with volunteer professionals and transportation to meet these needs.`
         },
-        termometro: 70,
-        carousel: [
-          "imagens/saude/img1.png",
-          "imagens/saude/img2.png",
-          "imagens/saude/img3.png"
-        ]
+        termometro: 70
       },
       igreja: {
         img: "imagens/igreja hannah.png",
@@ -1300,18 +1184,9 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
           pt: `Precisamos de recursos para apoiar a infraestrutura das igrejas, fornecer materiais de ensino, discipular líderes locais e expandir o alcance missionário.`,
           en: `We need resources to support church infrastructure, provide teaching materials, disciple local leaders, and expand our missionary reach.`
         },
-        termometro: 95,
-        carousel: [
-          "imagens/igreja/img1.png",
-          "imagens/igreja/img2.png",
-          "imagens/igreja/img3.png"
-        ]
+        termometro: 95
       }
     };
-
-    // Variáveis globais para o carrossel interno ampliado
-    let currentCarouselImages = [];
-    let currentCarouselIndex = 0;
 
     /* MOSTRAR DETALHES DO PROJETO */
     function mostrarDetalhes(projetoId) {
@@ -1365,19 +1240,6 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
         inglesBtn.style.display = "none";
       }
 
-      // Carregar imagens do carrossel interno (miniaturas)
-      currentCarouselImages = dados.carousel || [];
-      const carouselTrack = document.getElementById('detalhes-carousel-track');
-      carouselTrack.innerHTML = "";
-      currentCarouselImages.forEach((src, index) => {
-        const img = document.createElement('img');
-        img.src = src;
-        img.alt = dados.titulo[currentLang] + " carousel image " + (index+1);
-        img.classList.add("detalhes-carousel-item");
-        img.addEventListener('click', () => openModal(index));
-        carouselTrack.appendChild(img);
-      });
-
       document.getElementById('container-detalhes').style.display = 'block';
       document.getElementById('container-detalhes').scrollIntoView({ behavior: 'smooth' });
     }
@@ -1385,34 +1247,6 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
     function fecharDetalhes() {
       document.getElementById('container-detalhes').style.display = 'none';
     }
-
-    /* FUNÇÕES PARA O MODAL DO CARROSSEL INTERNO */
-    function openModal(index) {
-      currentCarouselIndex = index;
-      document.getElementById('modal-image').src = currentCarouselImages[currentCarouselIndex];
-      document.getElementById('carousel-modal').style.display = 'flex';
-    }
-
-    function closeModal() {
-      document.getElementById('carousel-modal').style.display = 'none';
-    }
-
-    function modalNext() {
-      if (currentCarouselImages.length === 0) return;
-      currentCarouselIndex = (currentCarouselIndex + 1) % currentCarouselImages.length;
-      document.getElementById('modal-image').src = currentCarouselImages[currentCarouselIndex];
-    }
-
-    function modalPrev() {
-      if (currentCarouselImages.length === 0) return;
-      currentCarouselIndex = (currentCarouselIndex - 1 + currentCarouselImages.length) % currentCarouselImages.length;
-      document.getElementById('modal-image').src = currentCarouselImages[currentCarouselIndex];
-    }
-
-    // Atribuir eventos aos botões do modal
-    document.getElementById('modal-close').addEventListener('click', closeModal);
-    document.getElementById('modal-next').addEventListener('click', modalNext);
-    document.getElementById('modal-prev').addEventListener('click', modalPrev);
 
     /* CONTROLE DE IDIOMA */
     const langPtBtn = document.getElementById('lang-pt');
@@ -1461,29 +1295,29 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
       fecharDetalhes();
     }
 
-    // Função para obter parâmetros da URL
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
+// Função para obter parâmetros da URL
+function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
+
+// Executa ao carregar a página
+document.addEventListener("DOMContentLoaded", function () {
+    const projetoSelecionado = getQueryParam("projeto"); // Obtém o nome do projeto da URL
+    const langSelecionado = getQueryParam("lang"); // Obtém o idioma da URL
+
+    // Se houver um idioma na URL, definir o idioma
+    if (langSelecionado) {
+        setLanguage(langSelecionado);
     }
 
-    // Executa ao carregar a página
-    document.addEventListener("DOMContentLoaded", function () {
-      const projetoSelecionado = getQueryParam("projeto"); // Obtém o nome do projeto da URL
-      const langSelecionado = getQueryParam("lang"); // Obtém o idioma da URL
-
-      // Se houver um idioma na URL, definir o idioma
-      if (langSelecionado) {
-        setLanguage(langSelecionado);
-      }
-
-      // Se houver um projeto na URL, exibir automaticamente seus detalhes
-      if (projetoSelecionado && projetosData[projetoSelecionado]) {
+    // Se houver um projeto na URL, exibir automaticamente seus detalhes
+    if (projetoSelecionado && projetosData[projetoSelecionado]) {
         setTimeout(() => {
-          mostrarDetalhes(projetoSelecionado);
+            mostrarDetalhes(projetoSelecionado);
         }, 500); // Pequeno delay para garantir que a página carregue corretamente
-      }
-    });
+    }
+});
   </script>
 </body>
 </html>
