--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -558,6 +558,7 @@
     .modal-close {
       top: 10px;
       right: 10px;
+      z-index: 101; /* Garante que fique acima dos demais elementos */
     }
   </style>
 </head>
@@ -987,7 +988,7 @@ For Burmese refugee children in Thailand, attending school is an almost impossib
 
 The Seeds of Wisdom project works to ensure these children can go to school. We handle the entire bureaucratic process, find local guarantors, and thanks to the good relationship we have developed with a school, we have enrolled and provided scholarships and school supplies for more than 50 children last year.
 
-In addition to formal education, these children also attend our Learning Center after school hours, where they receive academic reinforcement and Bible teaching. Now we need resources to guarantee the continuity of scholarships for the next academic year, which begins in May.
+In addition to formal education, these children also attend our Learning Center after school hours, where they receive academic reinforcement and Bible teaching. Now we need resources to guarantee the continuity of scholarships for the upcoming school year.
         `
         },
         acoes: {
@@ -1034,7 +1035,7 @@ The Harvesting Faith project was created to empower communities in Myanmar in ag
 
 Before the war began, we maintained an egg production farm with nearly 1,000 chickens, using an organic, free-range system, and developed our own low-cost feed—one of the biggest challenges in animal husbandry in the region.
 
-Unfortunately, due to the escalating war and the closure of Myanmar’s borders, the project is temporarily paused. However, we continue praying and waiting for the opportunity to resume it, because we know that sustainable agriculture is a powerful way to transform communities and bring hope to even the most remote villages.
+Unfortunately, due to the escalating war and the closure of Myanmar’s borders, the project is currently paused. However, we continue praying and waiting for the opportunity to resume it, because we know that sustainable agriculture is a powerful way to transform communities and bring hope to even the most remote villages.
         `
         },
         acoes: {
@@ -1083,7 +1084,7 @@ Em um segundo momento, planejamos disponibilizar o aplicativo no Brasil para que
 <i>“Go into all the world and preach the gospel to all creation.” – Mark 16:15</i><br><br>
 Hannah English Course is not just an English course; it’s an innovative missionary tool. Through it, students learn English while diving into the Word of God, becoming fluent in the language and strengthened in their faith. This app was developed to support English teaching in our Learning Centers and to facilitate project expansion to new missionary hubs in Southeast Asia.
 
-Imagine an app that teaches English in a fun, interactive way, aligned with the CEFR (Common European Framework of Reference for Languages), while conveying Christian values and deepening biblical knowledge. This is Hannah English Course—a gamified course that integrates Bible stories, music, videos, and the artificial intelligence of “Robô Samuel” to make each lesson unique and captivating.
+Imagine an app that teaches English in a fun, interactive way, aligned with the CEFR (Common European Framework of Reference for Languages), while conveying Christian values and deepening biblical knowledge. This is Hannah English Course—a gamified course that integrates Bible stories, songs, and videos along with the artificial intelligence of “Robô Samuel” to make each lesson unique and captivating.
 
 Hannah, the main character, guides this linguistic journey, inviting children, youth, and adults to explore the English language alongside the great teachings of the Word of God.
 
@@ -1391,10 +1392,14 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
       currentCarouselIndex = index;
       document.getElementById('modal-image').src = currentCarouselImages[currentCarouselIndex];
       document.getElementById('carousel-modal').style.display = 'flex';
+      // Scroll para o modal
+      document.getElementById('carousel-modal').scrollIntoView({ behavior: 'smooth' });
     }
 
     function closeModal() {
       document.getElementById('carousel-modal').style.display = 'none';
+      // Scroll de volta para o carrossel das miniaturas
+      document.querySelector('.detalhes-carousel').scrollIntoView({ behavior: 'smooth' });
     }
 
     function modalNext() {
@@ -1413,6 +1418,13 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
     document.getElementById('modal-close').addEventListener('click', closeModal);
     document.getElementById('modal-next').addEventListener('click', modalNext);
     document.getElementById('modal-prev').addEventListener('click', modalPrev);
+
+    // Fechar modal ao clicar fora da imagem ampliada
+    document.getElementById('carousel-modal').addEventListener('click', function(e) {
+      if (e.target === this) {
+        closeModal();
+      }
+    });
 
     /* CONTROLE DE IDIOMA */
     const langPtBtn = document.getElementById('lang-pt');
