--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -251,7 +251,7 @@
     #pagina-projetos-hero {
       width: 100%;
       min-height: 100vh; /* Ocupa a altura total da tela */
-      background: url("imagens/imgprojetos.png") center center / cover no-repeat fixed;
+      background: url("imagens/imgprojetos2.png") center center / cover no-repeat fixed;
       display: flex;
       flex-direction: column; /* Alinha itens na vertical */
       align-items: center; /* Centraliza na horizontal */
