--- a/LandPage/parceria.html
+++ b/LandPage/parceria.html
@@ -448,7 +448,7 @@
     </section>
 
     <!-- BOTÃO FLUTUANTE PARA TELAS PEQUENAS -->
-    <a class="cta-btn floating-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=his&lang=pt" target="_blank" style="display:none;">
+    <a class="cta-btn floating-btn" href="https://hannahenglishcourse.vercel.app/Carrossel/projetos.html?projeto=ingles&lang=pt" target="_blank" style="display:none;">
       Apoie o Projeto
     </a>
 
