--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -395,29 +395,31 @@
       overflow: visible;
       max-width: 100%;
     }
-    #main-circle-content {
-      position: absolute;
-      width: 200px;
-      height: 200px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 50%;
-      background-color: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-      color: #333;
-      text-align: center;
-      overflow: hidden;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    }
-    #main-circle-content img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+   #main-circle-content {
+  position: absolute;
+  width: 180px; /* Reduzi um pouco para evitar cortes */
+  height: 180px; /* Ajustado proporcionalmente */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background-color: transparent; /* Agora está transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+  overflow: hidden;
+  box-shadow: none; /* Remove qualquer sombra branca */
+}
+
+#main-circle-content img {
+  width: 90%; /* Reduz um pouco para não ser cortado */
+  height: 90%;
+  object-fit: contain; /* Mantém o GIF visível sem cortes */
+  background-color: transparent !important; /* Garante que não haja fundo branco */
+}
 
     #circle {
       position: absolute;
