--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -556,9 +556,27 @@
       transform: translateY(-50%);
     }
     .modal-close {
-      top: 10px;
-      right: 10px;
-      z-index: 101; /* Garante que fique acima dos demais elementos */
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: rgba(0,0,0,0.8);
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  font-size: 24px;
+  cursor: pointer;
+  border-radius: 50%;
+  z-index: 9999; /* Certifica que está acima da imagem */
+  display: block; /* Garante que apareça */
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.modal-close:hover {
+  background: rgba(255, 0, 0, 0.8);
+}
     }
   </style>
 </head>
