--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -405,7 +405,7 @@
       border-radius: 8px;
       object-fit: cover;
     }
-    /* NOVO: Carrossel interno de imagens nos detalhes */
+    /* Carrossel interno de imagens nos detalhes */
     .detalhes-carousel {
       margin-top: 10px;
       overflow-x: auto;
@@ -519,7 +519,7 @@
       display: none;   /* Padrão EN oculto */
     }
 
-    /* NOVO: Estilos para o modal de imagem ampliada do carrossel interno */
+    /* MODAL PARA IMAGEM AMPLIADA DO CARROSSEL INTERNO */
     .carousel-modal {
       position: fixed;
       top: 0;
@@ -530,7 +530,8 @@
       display: none;
       justify-content: center;
       align-items: center;
-      z-index: 100;
+      /* AUMENTAR z-index para ficar acima do header */
+      z-index: 999999;
     }
     .carousel-modal img {
       max-width: 90%;
@@ -556,27 +557,25 @@
       transform: translateY(-50%);
     }
     .modal-close {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background: rgba(0,0,0,0.8);
-  color: #fff;
-  border: none;
-  padding: 10px 15px;
-  font-size: 24px;
-  cursor: pointer;
-  border-radius: 50%;
-  z-index: 9999; /* Certifica que está acima da imagem */
-  display: block; /* Garante que apareça */
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  line-height: 40px;
-}
-
-.modal-close:hover {
-  background: rgba(255, 0, 0, 0.8);
-}
+      top: 15px;
+      right: 15px;
+      background: rgba(0,0,0,0.8);
+      color: #fff;
+      border: none;
+      padding: 10px 15px;
+      font-size: 24px;
+      cursor: pointer;
+      border-radius: 50%;
+      /* z-index maior para o botão ficar acima da imagem do modal */
+      z-index: 100000;
+      display: block; /* Garante que apareça */
+      width: 40px;
+      height: 40px;
+      text-align: center;
+      line-height: 40px;
+    }
+    .modal-close:hover {
+      background: rgba(255, 0, 0, 0.8);
     }
   </style>
 </head>
@@ -781,7 +780,7 @@
       <div class="detalhes-conteudo">
         <div class="detalhes-img">
           <img id="detalhes-img" src="" alt="Imagem Projeto" />
-          <!-- NOVO: Carrossel interno abaixo da imagem principal -->
+          <!-- Carrossel interno abaixo da imagem principal -->
           <div class="detalhes-carousel">
             <div class="detalhes-carousel-track" id="detalhes-carousel-track">
               <!-- As miniaturas serão inseridas dinamicamente -->
