--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -557,26 +557,29 @@
       transform: translateY(-50%);
     }
     .modal-close {
-      top: 15px;
-      right: 15px;
-      background: rgba(0,0,0,0.8);
-      color: #fff;
-      border: none;
-      padding: 10px 15px;
-      font-size: 24px;
-      cursor: pointer;
-      border-radius: 50%;
-      /* z-index maior para o botão ficar acima da imagem do modal */
-      z-index: 100000;
-      display: block; /* Garante que apareça */
-      width: 40px;
-      height: 40px;
-      text-align: center;
-      line-height: 40px;
-    }
-    .modal-close:hover {
-      background: rgba(255, 0, 0, 0.8);
-    }
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  border: none;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background 0.3s ease, transform 0.2s ease;
+  z-index: 9999;
+}
+
+.modal-close:hover {
+  background: rgba(255, 0, 0, 0.8);
+  transform: scale(1.1);
+}
   </style>
 </head>
 
